# yudao-fastapi-mini

./: .gitignore  README.md  manage.py  pnpm-lock.yaml
backend/: init_notify_db.py  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/system/: auth.py  dept.py  dict.py  dict_data.py  dict_type.py  login_log.py  menu.py  notice.py  notify.py  notify_template.py  operate_log.py  permission.py  post.py  role.py  tenant.py  tenant_package.py  user.py  user_profile.py
backend/app/common/: operate_log.py  paging.py  response.py
backend/app/core/: auth.py  config.py  context.py  database.py  middleware.py  redis.py  security.py  seed.py
backend/app/enums/: system_enums.py
backend/app/models/: base.py  dept.py  dict.py  login_log.py  menu.py  notice.py  notify.py  oauth2.py  operate_log.py  post.py  role.py  role_menu.py  tenant.py  user.py  user_role.py
backend/app/schemas/: auth.py  base.py  dept.py  dict.py  log.py  menu.py  notice.py  notify.py  permission.py  post.py  role.py  tenant.py  tenant_package.py  user.py
backend/app/services/: auth_service.py  dept_service.py  dict_service.py  log_service.py  menu_service.py  notice_service.py  notify_service.py  permission_service.py  post_service.py  role_service.py  tenant_package_service.py  tenant_service.py  token_service.py  user_service.py
backend/app/utils/: excel.py  request.py
backend/migrations/: env.py
backend/migrations/versions/: 5eeca545b614_init_system_tables.py
backend/scripts/: init_db.py
backend/sql/: README.md  init.sql
frontend/: package-lock.json  (+1 more)
(+1 files in other folders)
